Added other pages, fixed some errors in style.css, added new code

--- a/style.css
+++ b/style.css
@@ -86,10 +86,11 @@ header {
   left: 0;
   display: flex;
   justify-content: space-between;
-  height: 8vh;
+  height: 8%;
   width: 100%;
   align-items: center;
   background-color: #4f4f4f;
+  z-index: 2;
 }
 
 .logo {
@@ -109,9 +110,8 @@ header {
 .searchBar {
   background-color: #d9d9d9;
   color: #000059;
-  border: #000059, solid;
   border-radius: 1rem;
-  width: 40vh;
+  width: 35vh;
   height: 4vh;
 }
 
@@ -125,11 +125,11 @@ header {
 }
 
 .rightIcons {
-  margin: 1vh;
+  margin: 1%;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 8vh;
+  height: 8%;
 }
 
 .notifIcon {
@@ -146,11 +146,21 @@ header {
   position: fixed;
   top: 8vh;
   background-color: #636363;
-  height: 92vh;
+  height: 92%;
   width: 15%;
   max-width: 360px;
   display: flex;
   flex-direction: column;
+  z-index: 1;
+}
+
+.leftBar div {
+  gap: 5%;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 nav {
@@ -179,16 +189,15 @@ nav div {
   height: 92%;
   width: 15vw;
   max-width: 360px;
+  z-index: 1;
 }
 
 main {
-  background-color: aqua;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 10vh;
-  padding-top: 9vh;
-  padding-left: 15vw;
+  padding-top: 8vh;
+  padding-left: 15%;
   padding-right: 15%;
 }
 
@@ -198,12 +207,59 @@ main {
   align-items: center;
   justify-content: space-around;
   width: 100%;
-  border: solid;
 }
 
-.page-content{
-  display: flex;
-  border: solid;
+.page-content {
   align-items: center;
-  width: 100vh;
+  width: 95%;
+}
+
+.post {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 3%;
+}
+
+.post-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.user-info {
+  display: flex;
+}
+
+.post-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.post-footer {
+  display: flex;
+  justify-content: space-between;
+  border: black 2px;
+}
+
+/* 
+profile page
+*/
+
+.profile {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding-top: 30%;
+}
+
+.background-image {
+  position: absolute;
+  top: 0;
+  background-color: aqua;
+  width: 100%;
+  height: 30%;
+}
+
+.background-image img {
+  size: 100%;
 }
