--- a/style.css
+++ b/style.css
@@ -70,6 +70,8 @@
   font-style: italic;
 }
 
+/* for all pages */
+
 body {
   margin: 0;
   font-family: "Roboto";
@@ -214,6 +216,8 @@ main {
   width: 95%;
 }
 
+/* post */
+
 .post {
   display: flex;
   flex-direction: column;
@@ -242,14 +246,16 @@ main {
 }
 
 /* 
-profile page
+profile 
 */
 
 .profile {
   position: relative;
   display: flex;
   flex-direction: column;
-  padding-top: 30%;
+  padding-top: 25%;
+  align-items: center;
+  border-bottom: solid 2px #000059;
 }
 
 .background-image {
@@ -261,5 +267,107 @@ profile page
 }
 
 .background-image img {
-  size: 100%;
+  width: 100%;
+}
+
+.profile-pic {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  top: 10%;
+  left: 35%;
+  height: 30%;
+  width: 30%;
+}
+
+.profile-pic img {
+  height: 100%;
+}
+
+.profile-buttons {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.profile-info {
+  width: auto;
+  max-width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.profile-info h3 {
+  color: #000059;
+}
+
+.profile-menu {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.profile-menu div {
+  display: flex;
+}
+
+.new-post {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0.5rem;
+}
+
+.new-post input {
+  height: 2rem;
+  width: 60%;
+  border-radius: 15px;
+  background-color: #d9d9d9;
+  color: #000059;
+}
+
+.new-post img {
+  height: 1.8rem;
+  color: #000059;
+}
+
+/* list elements (chats, friends, servers) */
+.filter {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 1%;
+  margin-bottom: 1%;
+}
+
+.filter img {
+  height: 100%;
+  min-height: 50px;
+}
+
+.list-element {
+  width: 100%;
+  height: 7rem;
+  display: flex;
+  align-items: center;
+  border: #000059 solid 2px;
+  margin-bottom: 1%;
+}
+
+.element-picture {
+  height: 100%;
+}
+
+.element-picture img {
+  height: 100%;
+}
+
+.element-name {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  font-size: 1.8rem;
+  flex-grow: 1;
 }
