--- a/style.css
+++ b/style.css
@@ -216,15 +216,23 @@ main {
   width: 95%;
 }
 
-@media (max-width: 600px){
-  .label{
+@media (max-width: 600px) {
+  .label {
     display: none;
   }
-  nav{
+  nav {
     padding-left: 10%;
   }
 }
 
+@media (min-width: 601px) and (max-width: 1000px) {
+  .label {
+    display: none;
+  }
+  nav {
+    padding-left: 30%;
+  }
+}
 /* post */
 
 .post {
@@ -267,7 +275,7 @@ profile
   position: relative;
   display: flex;
   flex-direction: column;
-  padding-top: 25%;
+  padding-top: 25vh;
   align-items: center;
   border-bottom: solid 2px #000059;
 }
@@ -277,7 +285,7 @@ profile
   top: 0;
   background-color: aqua;
   width: 100%;
-  height: 30%;
+  height: 25vh;
 }
 
 .background-image img {
@@ -327,7 +335,6 @@ profile
   align-items: center;
 }
 
-
 .new-post {
   position: relative;
   display: flex;
@@ -347,6 +354,16 @@ profile
 .new-post img {
   height: 1.8rem;
   color: #000059;
+}
+
+@media (max-width: 600px) {
+  .profile {
+    padding-top: 44vh;
+  }
+
+  .profile-buttons {
+    justify-content: center;
+  }
 }
 
 /* list elements (chats, friends, servers) */
@@ -388,35 +405,35 @@ profile
   flex-grow: 1;
 }
 
-@media (max-width: 600px){
- .element-name{
-  font-size: 1rem;
- }
+@media (max-width: 600px) {
+  .element-name {
+    font-size: 1rem;
+  }
 
- .element-picture{
-  height: 60%;
- }
+  .element-picture {
+    height: 60%;
+  }
 
- .element-options{
-  height: 60%;
- }
+  .element-options {
+    height: 60%;
+  }
 
- .element-options img{
-  height: 50%;
- }
+  .element-options img {
+    height: 50%;
+  }
 
- .element-notification{
-  height: 60%;
- }
+  .element-notification {
+    height: 60%;
+  }
 
- .element-notification img{
-  height: 50%;
- }
+  .element-notification img {
+    height: 50%;
+  }
 }
 
 /* settings */
 
-.hardware-settings{
+.hardware-settings {
   display: flex;
   flex-direction: column;
 }
@@ -425,20 +442,35 @@ profile
   text-align: center;
 }
 
-.privacy-settings{
+.privacy-settings {
   display: flex;
   flex-direction: column;
 }
 
-.privacy-settings h2{
+.privacy-settings h2 {
   text-align: center;
 }
 
-.buttons{
+.buttons {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   margin-top: 10%;
+  gap: 1rem;
+}
+
+.buttons div {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+button {
+  width: 8rem;
+  height: 2rem;
 }
 
 button[type="submit"] {
@@ -450,11 +482,12 @@ button[type="submit"] {
 button[type="reset"] {
   background-color: rgba(0, 0, 0, 0.5);
   color: white;
+  border-radius: 15px;
 }
 
 /* login */
 
-.login{
+.login {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -462,24 +495,23 @@ button[type="reset"] {
   gap: 10%;
 }
 
-form{
+form {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 35%;
 }
 
-.links{
+.links {
   display: flex;
   justify-content: space-between;
   margin-top: 10%;
   width: 60%;
 }
 
-input{
+input {
   border-radius: 15px;
   width: 200%;
-
 }
 
 .checkbox-label {
