--- a/style-bootstrap.scss
+++ b/style-bootstrap.scss
@@ -5,3 +5,4 @@
 @import "node_modules/bootstrap/scss/buttons";
 @import "node_modules/bootstrap/scss/forms";
 @import "node_modules/bootstrap/scss/utilities";
+@import "node_modules/bootstrap/scss/dropdown"
