Little rework with html code. Added scripts to create new posts and sending messages

--- a/style.css
+++ b/style.css
@@ -267,6 +267,11 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+}
+
+.post-content-text{
+  width: 100%;
 }
 
 .post-footer {
@@ -356,7 +361,7 @@ profile
   margin: 0.5rem;
 }
 
-.new-post input {
+#new-post-input {
   height: 2rem;
   width: 60%;
   border-radius: 15px;
