--- a/style-bootstrap.scss
+++ b/style-bootstrap.scss
@@ -5,4 +5,5 @@
 @import "node_modules/bootstrap/scss/buttons";
 @import "node_modules/bootstrap/scss/forms";
 @import "node_modules/bootstrap/scss/utilities";
-@import "node_modules/bootstrap/scss/dropdown"
+@import "node_modules/bootstrap/scss/dropdown";
+@import "node_modules/bootstrap/scss/alert";
