--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ main {
   width: 100%;
 }
 
-.post-content-text{
+.post-content-text {
   width: 100%;
 }
 
@@ -422,8 +422,6 @@ profile
   font-size: 1.8rem;
   flex-grow: 1;
 }
-
-
 
 @media (max-width: 600px) {
   .element-name {
@@ -579,45 +577,66 @@ button[type="reset"] {
 
 /*Messages*/
 
-.input-message{
+.input-message {
   position: fixed;
   bottom: 1%;
   width: 60%;
   left: 20%;
-  height: 4vh;
+  height: auto;
 }
 
-.message{
+.message {
   display: flex;
+  flex-direction: column;
   height: 100%;
   align-items: center;
   border: solid;
   margin-bottom: 1%;
 }
 
-
-.message-image{
-  width: 10%;
+.message-info {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.message-image img{
+.message-sender {
+  display: flex;
+  align-items: center;
+}
+
+.message-image {
   width: 100%;
 }
 
-.message-content{
-  width: 85%;
+.message-image img {
+  width: 100%;
 }
 
-.message-age{
+.message-content {
+  width: 100%;
+}
+
+.message-age {
   align-items: start;
   height: 100%;
 }
 
+#file-input {
+  display: none;
+}
+
+.message-media {
+  display: flex;
+  justify-content: center;
+}
+
 @media (max-width: 600px) {
-  .message{
+  .message {
     font-size: small;
   }
-  #message-image{
+  #message-image {
     display: none;
   }
 }
