--- a/style.css
+++ b/style.css
@@ -540,17 +540,33 @@ button[type="reset"] {
 
 .connection-input label {
   width: 60%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.additional {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .links {
-  width: 60%;
+  width: 100%;
   display: flex;
   text-align: center;
   margin: 1rem;
+  justify-content: space-around;
+  gap: 10px;
 }
 
 .links a {
   width: 100%;
+  text-decoration: underline;
+}
+
+#system-output {
+  text-align: center;
 }
 
 .connection button {
